--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# REACT_APP_BACKEND =http://localhost:8000/api/
-REACT_APP_BACKEND=https://thriftstore-backend-git-main-meenakshiratnawat.vercel.app/api/
+REACT_APP_BACKEND =http://localhost:8000/api/
 
