--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-webpack-plugin": "^7.1.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
